# EssexEngineCore

./: BaseApp.h  BaseDriver.h  CMakeLists.txt  Context.h  WeakPointer.h
Logging/: ILogDriver.h  LogDaemon.cpp  LogDriver.cpp  LogDriver.h
Models/: IState.h  State.cpp
Utils/: RStarBoundingBox.h  RStarTree.h  RStarVisitor.h  StateStack.cpp  StateStack.h
src/: BaseApp.h  BaseDaemon.h  BaseDriver.h  BaseProcessDaemon.h  BaseQueuedDaemon.h  BaseUniquePointer.h  CachedPointer.h  Context.h  EssexEnvironment.h  IApp.h  IDaemon.h  IDriver.h  IKernel.h  IMessage.h  ISmartPointer.h  IWakeable.h  MWakeableSleeper.h  Nullable.h  SharedPointer.h  SmartPointer.h  UniquePointer.h  WeakPointer.h
src/Logging/: ILogDriver.h  LogDaemon.cpp  LogDaemon.h  LogDaemonMessage.h  LogDriver.cpp  LogDriver.h
src/Models/: BaseMessage.h  IMessage.h  IMessageResponse.h  IState.h  State.cpp  State.h
src/Utils/: IResourceCache.h  MessageQueue.h  ResourceCache.h  StateStack.cpp  StateStack.h  ThreadPool.h
